crates/ty_python_semantic/resources/mdtest/snapshots/typed_dict.md_-_`TypedDict`_-_Diagnostics_(e5289abf5c570c29).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: typed_dict.md - `TypedDict` - Diagnostics
mdtest path: crates/ty_python_semantic/resources/mdtest/typed_dict.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypedDict, Final
 2 | 
 3 | class Person(TypedDict):
 4 |     name: str
 5 |     age: int | None
 6 | 
 7 | def access_invalid_literal_string_key(person: Person):
 8 |     person["nane"]  # error: [invalid-key]
 9 | 
10 | NAME_KEY: Final = "nane"
11 | 
12 | def access_invalid_key(person: Person):
13 |     person[NAME_KEY]  # error: [invalid-key]
14 | 
15 | def access_with_str_key(person: Person, str_key: str):
16 |     person[str_key]  # error: [invalid-key]
17 | 
18 | def write_to_key_with_wrong_type(person: Person):
19 |     person["age"] = "42"  # error: [invalid-assignment]
20 | 
21 | def write_to_non_existing_key(person: Person):
22 |     person["nane"] = "Alice"  # error: [invalid-key]
23 | 
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
25 |     person[str_key] = "Alice"  # error: [invalid-key]
26 | 
27 | def create_with_invalid_string_key():
28 |     # error: [invalid-key]
29 |     alice: Person = {"name": "Alice", "age": 30, "unknown": "Foo"}
30 | 
31 |     # error: [invalid-key]
32 |     bob = Person(name="Bob", age=25, unknown="Bar")
33 | from typing_extensions import ReadOnly
34 | 
35 | class Employee(TypedDict):
36 |     id: ReadOnly[int]
37 |     name: str
38 | 
39 | def write_to_readonly_key(employee: Employee):
40 |     employee["id"] = 42  # error: [invalid-assignment]
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
43 |     person['nane'] = "Alice"  # fmt: skip
44 | class MovieBase(TypedDict):
45 |     name: str
46 | 
47 | class BadMovie(MovieBase):
48 |     name: int  # error: [invalid-typed-dict-field]
49 | 
50 | class LeftBase(TypedDict):
51 |     value: int
52 | 
53 | class RightBase(TypedDict):
54 |     value: str
55 | 
56 | class BadMerge(LeftBase, RightBase):  # error: [invalid-typed-dict-field]
57 |     pass
```

# Diagnostics

```
error[invalid-key]: Unknown key "nane" for TypedDict `Person`
 --> src/mdtest_snippet.py:8:5
  |
8 |     person["nane"]  # error: [invalid-key]
  |     ------ ^^^^^^ Did you mean "name"?
  |     |
  |     TypedDict `Person`
  |
5  |     age: int | None
6  |
7  | def access_invalid_literal_string_key(person: Person):
   -     person["nane"]  # error: [invalid-key]
8  +     person["name"]  # error: [invalid-key]
9  |
10 | NAME_KEY: Final = "nane"
11 |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-key]: Unknown key "nane" for TypedDict `Person`
  --> src/mdtest_snippet.py:13:5
   |
13 |     person[NAME_KEY]  # error: [invalid-key]
   |     ------ ^^^^^^^^ Unknown key "nane" - did you mean "name"?
   |     |
   |     TypedDict `Person`
   |

```

```
error[invalid-key]: TypedDict `Person` can only be subscripted with a string literal key, got key of type `str`
  --> src/mdtest_snippet.py:16:12
   |
16 |     person[str_key]  # error: [invalid-key]
   |            ^^^^^^^
   |

```

```
error[invalid-assignment]: Invalid assignment to key "age" with declared type `int | None` on TypedDict `Person`
  --> src/mdtest_snippet.py:19:5
   |
19 |     person["age"] = "42"  # error: [invalid-assignment]
   |     ------ -----    ^^^^ value of type `Literal["42"]`
   |     |      |
   |     |      key has declared type `int | None`
   |     TypedDict `Person`
   |
info: Item declaration
 --> src/mdtest_snippet.py:5:5
  |
5 |     age: int | None
  |     --------------- Item declared here
  |

```

```
error[invalid-key]: Unknown key "nane" for TypedDict `Person`
  --> src/mdtest_snippet.py:22:5
   |
22 |     person["nane"] = "Alice"  # error: [invalid-key]
   |     ------ ^^^^^^ Did you mean "name"?
   |     |
   |     TypedDict `Person`
   |
19 |     person["age"] = "42"  # error: [invalid-assignment]
20 |
21 | def write_to_non_existing_key(person: Person):
   -     person["nane"] = "Alice"  # error: [invalid-key]
22 +     person["name"] = "Alice"  # error: [invalid-key]
23 |
24 | def write_to_non_literal_string_key(person: Person, str_key: str):
25 |     person[str_key] = "Alice"  # error: [invalid-key]
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-key]: TypedDict `Person` can only be subscripted with a string literal key, got key of type `str`.
  --> src/mdtest_snippet.py:25:12
   |
25 |     person[str_key] = "Alice"  # error: [invalid-key]
   |            ^^^^^^^
   |

```

```
error[invalid-key]: Unknown key "unknown" for TypedDict `Person`
  --> src/mdtest_snippet.py:29:21
   |
29 |     alice: Person = {"name": "Alice", "age": 30, "unknown": "Foo"}
   |                     -----------------------------^^^^^^^^^--------
   |                     |                            |
   |                     |                            Unknown key "unknown"
   |                     TypedDict `Person`
   |

```

```
error[invalid-key]: Unknown key "unknown" for TypedDict `Person`
  --> src/mdtest_snippet.py:32:11
   |
32 |     bob = Person(name="Bob", age=25, unknown="Bar")
   |           ------ TypedDict `Person`  ^^^^^^^^^^^^^ Unknown key "unknown"
   |

```

```
error[invalid-assignment]: Cannot assign to key "id" on TypedDict `Employee`
  --> src/mdtest_snippet.py:40:5
   |
40 |     employee["id"] = 42  # error: [invalid-assignment]
   |     -------- ^^^^ key is marked read-only
   |     |
   |     TypedDict `Employee`
   |
info: Item declaration
  --> src/mdtest_snippet.py:36:5
   |
36 |     id: ReadOnly[int]
   |     ----------------- Read-only item declared here
   |

```

```
error[invalid-key]: Unknown key "nane" for TypedDict `Person`
  --> src/mdtest_snippet.py:43:5
   |
43 |     person['nane'] = "Alice"  # fmt: skip
   |     ------ ^^^^^^ Did you mean 'name'?
   |     |
   |     TypedDict `Person`
   |
40 |     employee["id"] = 42  # error: [invalid-assignment]
41 | def write_to_non_existing_key_single_quotes(person: Person):
42 |     # error: [invalid-key]
   -     person['nane'] = "Alice"  # fmt: skip
43 +     person['name'] = "Alice"  # fmt: skip
44 | class MovieBase(TypedDict):
45 |     name: str
46 |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-typed-dict-field]: Cannot overwrite TypedDict field `name`
  --> src/mdtest_snippet.py:48:5
   |
48 |     name: int  # error: [invalid-typed-dict-field]
   |     ^^^^^^^^^ Inherited mutable field type `str` is incompatible with `int`
   |
info: Field declaration
  --> src/mdtest_snippet.py:45:5
   |
45 |     name: str
   |     --------- Inherited field `name` declared here on base `MovieBase`
   |

```

```
error[invalid-typed-dict-field]: Cannot overwrite TypedDict field `value` while merging base classes
  --> src/mdtest_snippet.py:56:7
   |
56 | class BadMerge(LeftBase, RightBase):  # error: [invalid-typed-dict-field]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Inherited mutable field type `str` is incompatible with `int`
   |
info: Field declaration
  --> src/mdtest_snippet.py:51:5
   |
51 |     value: int
   |     ---------- Field `value` already inherited from another base here
   |
info: Field declaration
  --> src/mdtest_snippet.py:54:5
   |
54 |     value: str
   |     ---------- Inherited field `value` declared here on base `RightBase`
   |

```
